--- a/_Imports.razor
+++ b/_Imports.razor
@@ -1,13 +1,14 @@
 ﻿@using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using System.Diagnostics
-@using System.Threading
 @using OneDrive_CommunityUI
 @using OneDrive_CommunityUI.Shared
+@using System.Diagnostics
+@using OneDrive_CSharp
 @using System.IO
 @using System.Collections.Generic
-@using System.Linq
+@using Humanizer
