--- a/_Imports.razor
+++ b/_Imports.razor
@@ -11,4 +11,5 @@
 @using OneDrive_CSharp
 @using System.IO
 @using System.Collections.Generic
-@using Humanizer
+@using ElectronNET.API;
+@using ElectronNET.API.Entities;
